tests/reference/ast-prefix_string_02-3d530b2.stderr
syntax error: Token '"Hello World"' (of type 'string') is unexpected here
 --> tests/errors/prefix_string_02.py:7:10
  |
7 |  print(r "Hello World")
  |          ^^^^^^^^^^^^^ 
